--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,8 @@
 
         <!-- Nav Familie-->
         <prosessering.version>2.20251103090009_f7d38c7</prosessering.version>
-        <felles-kontrakter.version>4.0_20260202125108_bec1903</felles-kontrakter.version>
-        <felles.version>4.20260128165036_0708695</felles.version>
+        <felles-kontrakter.version>4.0_20260204122732_558ee1d</felles-kontrakter.version>
+        <felles.version>4.20260205114838_3a4c3dc</felles.version>
         <eksterne-kontrakter-bisys.version>2.0_20260123183438_42a3cb1</eksterne-kontrakter-bisys.version>
         <familie.kontrakter.stønadsstatistikk>2.0_20260123183438_42a3cb1</familie.kontrakter.stønadsstatistikk>
         <familie.kontrakter.saksstatistikk>2.0_20260123183438_42a3cb1</familie.kontrakter.saksstatistikk>
