Legg til permission: 'contents: read' i deploy jobs
Ny standard i templates, muliggjør lesning av privat repo

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,6 +31,7 @@ jobs:
     name: Deploy dev
     permissions:
       id-token: write
+      contents: read
     needs: [build]
     uses: navikt/familie-baks-gha-workflows/.github/workflows/deploy.yaml@main # ratchet:exclude
     with:
@@ -42,6 +43,7 @@ jobs:
     name: Deploy prod
     permissions:
       id-token: write
+      contents: read
     needs: [build, deploy-dev]
     uses: navikt/familie-baks-gha-workflows/.github/workflows/deploy.yaml@main # ratchet:exclude
     with:
